# aura-cef

./: .gitignore  CMakeLists.txt  README.md  SUMMARY.md  cef_browser.cpp  current
docs/: CODE_SIGNING.md  CONCLUSION.md  DEVELOPMENT_MODE.md  GETTING_STARTED.md  KNOWN_ISSUES.md  PROJECT_INFO.md  README.md  SUMMARY.md  TECHNICAL_GUIDE.md  USER_GUIDE.md
resources/: Info.plist  cef_browser.entitlements
scripts/: build.sh  run_browser.sh  run_dev_browser.sh  setup_cef.sh  sign_app.sh
src/: browser_app.cpp  browser_app.h  browser_client.cpp  browser_client.h  main.cpp
